--- a/app/src/main/res/layout/activity_collapsing.xml
+++ b/app/src/main/res/layout/activity_collapsing.xml
@@ -51,7 +51,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
+            android:padding="16dp"
             android:orientation="vertical">
 
             <TextView
