--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,6 +15,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:stateListAnimator="@animator/sl_state_animator"
         app:radiusFactor="0.2">
 
         <RelativeLayout
