add hasToolbar attribute

--- a/scalinglib/src/main/res/values/attrs.xml
+++ b/scalinglib/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
 
     <declare-styleable name="ScalingLayout">
         <attr name="radiusFactor" format="float"/>
+        <attr name="hasToolbar" format="boolean"/>
     </declare-styleable>
 
 </resources>
